<resources>
    <string name="my_doctor">My Doctor</string>
    <string name="settings">Settings</string>
    <string name="menu_my_appointments">My Appointments</string>
    <string name="menu_my_medicals">My Medicals</string>
    <string name="menu_new_appointment">New Appointment</string>
    <string name="menu_new_medical_examination">New medical</string>
    <string name="menu_title_profile">My Profile</string>
    <string name="menu_my_patients">My Patients</string>
    <string name="menu_title_sari_pay">Syber Delivery Pay</string>
    <string name="menu_title_help_legal">Help &amp; Legal</string>
    <string name="menu_title_refer_friend">Refer a Friend</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_jobs">My Jobs</string>
    <string name="menu_title_transactions">My Transactions</string>
    <string name="menu_title_notifications">Notifications</string>
    <string name="location_permission">Please allow app to access your location to locate delivery agents.</string>
    <string name="location_permission_driver">Please allow app to access your location.</string>
    <string name="phone_permission">Please allow app to access your phone identity for best performance.</string>
    <string name="storage_permission">Please allow app to access sdcard and storage to cache important files and images.</string>
    <string name="camera_permission">Please allow app to access camera permission to take profile picture from camera.</string>
    <string name="calender_permission">Please allow app to access calender so that app can access/manage dates for you.</string>
    <string name="contacts_permission">Please allow app to access contact so that app can access/manage contact for you.</string>
    <string name="sensor_permission">Please allow app to access sensor so that app can access/manage sensor for you.</string>
    <string name="call_permission">Please allow app to access call so that app can access/manage calls for you.</string>
    <string name="network_permission">Please allow app to access network so that app can access network for you.</string>
    <string name="wifi_permission">Please allow app to access wifi so that app can access/manage wifi for you.</string>
    <string name="battery_permission">Please allow app to access battery so that app can access battery status.</string>
    <string name="record_audio_permission">Please allow app to record audio so that app can record and send audios.</string>
    <string name="admin">Admin</string>
    <string name="pickup_address">Pickup address</string>
    <string name="delivery_address">Delivery address</string>
    <string name="submit">Submit</string>
    <string name="comment_here">comment here….</string>
    <string name="signature">Signature</string>
    <string name="rate_n_comment"><![CDATA[Rate & Comments]]></string>
    <string name="cancelled">Cancelled</string>
    <string name="msg_no_record_found">No record found.</string>
    <string name="msg_location_not_found">Location not found</string>
    <string name="reset_password">Reset Password</string>
    <string name="default_country_code" translatable="false">+249</string>
    <string name="enter_mobile_number">Phone</string>
    <string name="continue_btn">Continue</string>
    <string name="add_via_syber_pay_btn">Add Via SyberPay</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="uploaded_content_Images">Uploaded Content Images</string>
    <string name="email">Email</string>
    <string name="email_mandatory">Email<sup>*</sup></string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="switch_order">Switch</string>
    <string name="login">Login</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="emergency">Emergency</string>
    <string name="ok">OK</string>
    <string name="select_date">Select Date</string>
    <string name="first_name_mandatory">First Name<sup>*</sup></string>
    <string name="last_name_mandatory">Last Name<sup>*</sup></string>
    <string name="full_name_mandatory">Full Name<sup>*</sup></string>
    <string name="practice_from">Practice from<sup>*</sup></string>
    <string name="specialization">Specialization<sup>*</sup></string>
    <string name="clinic_name">Clinic Name<sup>*</sup></string>
    <string name="appointment_date">Appointment Date<sup>*</sup></string>
    <string name="appointment_kind">Appointment Kind<sup>*</sup></string>
    <string name="exam_name">Exam Name<sup>*</sup></string>
    <string name="exam_result">Exam Result<sup>*</sup></string>
    <string name="mobile_number">Mobile Number<sup>*</sup></string>
    <string name="mobile_number_mandatory">Mobile Number*</string>
    <string name="remove">Remove</string>
    <string name="txt_allow">Allow</string>
    <string name="no_internet_connection">No Internet connection available</string>
    <string name="msg_add_signature">Please add your Signature.</string>
    <string name="total_billing_amount">Total Billing Amount</string>
    <string name="sign_out_msg">Do you really want to Log out?</string>
    <string name="request_sent_success">Submitted Successfully</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="app_setting">App Settings</string>
    <string name="share_text_before">Hi,\n Check out this awesome app</string>
    <string name="share_text_after">for booking a delivery. https://play.google.com/store/apps/details?id=</string>
    <string name="image_upload_title">Pick Your Profile Image.</string>
    <string name="image">Image</string>
    <string name="pick_from_camera">Pick From Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="agent_online_doze_mode">Delivery Agent Online</string>
    <string name="location_update_doze_mode">Location Update</string>
    <string name="select_time">Select Time</string>
    <string name="please_try_again">Communication problem, please try after sometime.</string>
    <string name="driver_assign">New Request Driver.</string>
    <string name="header_booking_details">Booking Details</string>
    <string name="wallet">wallet</string>
    <string name="kg">&#160;Kg</string>
    <string name="cc">&#160;Cc</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_success">Payment Success</string>
    <string name="pay">Pay</string>
    <string name="msg_additional_fare"> As per updated address kindly pay outstanding amount %1$s</string>
    <string name="promo_code">Promo Code</string>
    <string name="faqs">FAQ’s</string>
    <string name="header_register">Register</string>
    <string name="header_shipment_details">View Shipment Details</string>
    <string name="empty_promo_code_err_msg">Please Enter Promo Code </string>
    <string name="receiver_info">Receiver Information</string>
    <string name="change_location">Change Location</string>
    <string name="sender_info">Sender Information</string>
    <string name="send_from">Send From</string>
    <string name="send_to">Send To</string>
    <string name="header_track_shipment">Track Shipment</string>
    <string name="header_rate_experience">Rate Experience</string>
    <string name="msg_enter_email">Please Enter Email Address</string>
    <string name="msg_valid_password">Please Enter Password</string>
    <string name="msg_invalid_first_name">Please Enter a Valid First Name</string>
    <string name="msg_invalid_last_name">Please Enter a Valid Last Name</string>
    <string name="msg_invalid_email">"Please Enter a Valid Email Address</string>
    <string name="msg_invalid_password_length">Password must be at least 8 characters long.</string>
    <string name="msg_invalid_new_password_length">New Password must be at least 8 characters long.</string>
    <string name="msg_mismatch_new_and_confirm">New Password and Confirm Password must be same.</string>
    <string name="msg_match_new_and_old">Old Password and New Password must be different.</string>
    <string name="msg_invalid_password">Please Enter Valid Password</string>
    <string name="msg_enter_old_password">Please Enter Old Password</string>
    <string name="msg_enter_new_password">Please Enter New Password</string>
    <string name="msg_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="msg_empty_person_contact">Enter contact person number</string>
    <string name="msg_empty_mobile_number">Please enter Mobile number</string>
    <string name="msg_empty_password">Please enter password</string>
    <string name="msg_invalid_mobile_length">Mobile Number must be at least 7 digit long.</string>
    <string name="msg_only_digit_not_allowed">only number is Not allowed in Name field</string>
    <string name="msg_otp_invalid">Please Enter a Valid OTP.</string>
    <string name="click_back_again_exit">Please tap back again to exit.</string>
    <string name="header_select_country">Select Country</string>
    <string name="msg_warn_select_category">Sorry, category selection is restricted.</string>
    <string name="header_select_category">Select Category</string>
    <string name="title_select_location_delivery">Delivery Location</string>
    <string name="title_select_location_pickup">Pickup Location</string>
    <string name="title_cash_on_the_second_round_arrival">Cash on the second round arrival</string>
    <string name="menu_my_shipments">My Orders</string>
    <string name="active">Active</string>
    <string name="past">Past</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="report_emergency">Report Emergency</string>
    <string name="select_reason_emergency">Please select a reason to report an emergency</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cash_collection">Cash Collection</string>
    <string name="menu_title_my_jobs">My Jobs</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="msg_app_init_failed">App initialization Failed. Please try again.</string>
    <string name="msg_warn_internet_fail_retry">Internet connection failed. Please try again.</string>
    <string name="warn_invalid_login">Invalid login credentials.</string>
    <string name="msg_session_expired">Session expired. Please login again.</string>
    <string name="profile_update_successfully">Profile updated successfully.</string>
    <string name="msg_invalid_house_flat">Please enter flat/house number.</string>
    <string name="fetching_location">Getting Location</string>
    <string name="no_data_available">No data available</string>
    <string name="price_not_specified">Price not Available yet</string>
    <string name="select_pickup_location">Please select pickup location</string>
    <string name="select_delivery_location">Please select drop off location</string>
    <string name="accept">Accept</string>
    <string name="seconds">Seconds</string>
    <string name="reject">Reject</string>
    <string name="call_to">Call to</string>
    <string name="shipment_rejection_confirmation_message">Do you really want to Reject this shipment?</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="no_show">No Show</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="resume">Resume</string>
    <string name="arrived">Arrived</string>
    <string name="welcome_back">Welcome \n Back</string>
    <string name="enter_password">Password</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create \n Account</string>
    <string name="or">or</string>
    <string name="password_mandatory">Password<supp>*</supp></string>
</resources>