<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.mydoctor.customer.activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_constraint_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_constraint_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="@dimen/dp_0"
        android:layout_height="0dp"
        android:scrollbarThumbVertical="@null"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="@id/guideline_constraint_end"
        app:layout_constraintStart_toStartOf="@id/guideline_constraint_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_main"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_top_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/navigation_bar_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_login_header"
                    style="@style/HeadingsTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:layout_marginTop="@dimen/dp_40"
                    android:singleLine="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_login_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_login_header">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        app:hintTextColor="@color/secondary_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_marginTop="@dimen/dp_20"
                        app:layout_constraintEnd_toEndOf="@id/btn_login"
                        app:layout_constraintStart_toStartOf="@id/btn_login"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textAlignment="viewStart"
                            android:textDirection="locale" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        app:hintTextColor="@color/secondary_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:layout_marginTop="@dimen/dp_20"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="@id/btn_login"
                        app:layout_constraintStart_toStartOf="@id/btn_login"
                        app:layout_constraintTop_toBottomOf="@id/til_email">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:longClickable="false"
                            android:textAlignment="viewStart"
                            android:textDirection="locale" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/LargeBoldTextButtonRoundedStyle"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_48"
                        android:layout_marginTop="@dimen/dp_30"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_password" />

                    <TextView
                        android:id="@+id/login_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dp_30"
                        android:background="@color/dark_grey"
                        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

                    <TextView
                        android:id="@+id/or_divider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:text="@string/or"
                        android:background="@color/white"
                        android:layout_marginTop="@dimen/dp_18"
                        android:paddingHorizontal="@dimen/dp_20"
                        app:layout_constraintStart_toStartOf="@id/login_divider"
                        app:layout_constraintEnd_toEndOf="@id/login_divider"
                        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

                    <Button
                        android:id="@+id/btn_register"
                        style="@style/BoldTextLightButtonRoundedStyle"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_48"
                        android:layout_marginTop="@dimen/dp_30"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/login_divider" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
